# hotaru

./: .gitignore  BENCHMARK_RESULTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_STYLE.md  COPYRIGHT.md  Cargo.toml  GOVERNANCE.md  HOTARU_HTTP_DOC.md  HOTARU_STYLE.md  LICENSE.txt  POOL_IMPLEMENTATION.md  QUICK_TUTORIAL.md  SECURITY.md  macro_ra.md  readme.md
ahttpm/: Cargo.toml
ahttpm/src/: lib.rs
examples/api_registration_example/: Cargo.toml
examples/api_registration_example/src/: main.rs
examples/blueprint_compile_gates/: Cargo.toml  check.sh
examples/blueprint_compile_gates/src/: main.rs
examples/example_hotaru_2/: Cargo.toml  build.rs
examples/example_hotaru_2/src/: async_endpoints.rs  middleware_inheritance.rs
h2per/: Cargo.toml  HYPER_ACCESS.md  UPGRADE_PLAN.md
h2per/examples/: advanced_hyper_usage.rs  websocket_upgrade.rs
h2per/src/: context.rs  hyper_exports.rs  io_compat.rs  lib.rs  message.rs  prelude.rs  protocol.rs  request.rs  response.rs  service.rs  stream.rs  transport.rs  upgrade.rs  websocket.rs
hotaru/: Cargo.toml  readme.md
hotaru/src/: http.rs  lib.rs  main.rs  prelude.rs
hotaru_bench/: BENCHMARK_RESULTS.md  Cargo.toml  README.md
hotaru_bench/actix_hello/: Cargo.toml
hotaru_bench/actix_hello/src/: main.rs
hotaru_bench/benches/: http_benchmark.rs
hotaru_bench/h2per_hello/: Cargo.toml
hotaru_bench/h2per_hello/src/: main.rs
hotaru_bench/hotaru_hello/: Cargo.toml
hotaru_bench/hotaru_hello/src/: main.rs
hotaru_bench/src/: lib.rs  main.rs  memory_bench.rs  traits_bench.rs
hotaru_core/: Cargo.toml  blueprint_0_9_update_plan.md  readme.md
hotaru_core/examples/: connection_pool_demo.rs
hotaru_core/src/: alias.rs  app.rs  connection.rs  debug.rs  executable.rs  lib.rs  marker.rs  middleware_endpoint_implementation.md  url.rs
hotaru_core/src/app/: application.rs  builder.rs  middleware.rs  protocol.rs  registry.rs
hotaru_core/src/client/: connection_target.rs  mod.rs  pool.rs  registry.rs
hotaru_core/src/connection/: ARCHITECTURE.md  accepter.rs  builder.rs  compat.rs  connection.rs  connector.rs  development.md  documentation.md  error.rs  io.rs  protocol.rs  stream.rs  tcp.rs  test.rs  test_support.rs  transport_spec.rs
hotaru_core/src/executable/: executable.rs  middleware.rs
hotaru_core/src/http/: body.rs  client_context.rs  context.rs  cookie.rs  documentation.md  encoding.rs  http_value.rs  meta.rs  mod.rs  net.rs  request.rs  response.rs  start_line.rs  traits.rs
hotaru_core/src/protocol/: channel.rs  context.rs  error.rs  message.rs  mod.rs  protocol.rs  stream.rs  transport.rs  types.rs
hotaru_core/src/sql/: client.rs  context.rs  message.rs  middleware.rs  mod.rs  pool.rs  protocol.rs  transport.rs
hotaru_core/src/url/: error.rs  parser.rs  pattern.rs  root.rs  segments.rs
hotaru_grpc/: Cargo.toml  documentation.md
hotaru_grpc/examples/: client.rs  demo.rs  greeter.rs  simple_server.rs
hotaru_grpc/proto/: helloworld.proto
hotaru_grpc/src/: context.rs  lib.rs  protocol.rs  service.rs  transport.rs
hotaru_http/: Cargo.toml  readme.md
hotaru_http/src/: body.rs  context.rs  cookie.rs  encoding.rs  error.rs  form.rs  http_value.rs  lib.rs  meta.rs  net.rs  request.rs  response.rs  safety.rs  send_request.rs  test.rs  traits.rs
hotaru_http/src/channel/: http1.rs  http_channel.rs  mod.rs
hotaru_http/src/context/: context.rs  io.rs  mod.rs
hotaru_http/src/message/: body.rs  http_value.rs  meta.rs  mod.rs  request.rs  response.rs  start_line.rs
hotaru_http/src/protocol/: channel.rs  error.rs  helpers.rs  http_channel.rs  mod.rs  protocol_impl.rs  traits.rs  transport.rs
hotaru_http/src/security/: mod.rs  safety.rs
hotaru_http/src/util/: cookie.rs  encoding.rs  form.rs  mod.rs  test.rs
hotaru_io_embedded/: Cargo.toml
hotaru_io_embedded/src/: lib.rs
hotaru_io_embedded/tests/: error_kind_adapter.rs
hotaru_io_futures/: Cargo.toml
hotaru_io_futures/src/: lib.rs
hotaru_io_tokio/: Cargo.toml
hotaru_io_tokio/src/: lib.rs
hotaru_io_tokio/src/tcp/: mod.rs  primitive.rs  runtime.rs  stream.rs  transport.rs
hotaru_lib/: Cargo.toml  readme.md
hotaru_lib/src/: compression.rs  ende.rs  lib.rs  random.rs  url_encoding.rs
hotaru_meta/: Cargo.toml  readme.md
hotaru_meta/src/: lib.rs
hotaru_meta/tests/: progress.rs
hotaru_rt_embassy/: Cargo.toml
hotaru_rt_embassy/src/: lib.rs  mutex.rs  once_cell.rs  runtime.rs
hotaru_rt_embassy/tests/: macro_config.rs
hotaru_rt_tokio/: Cargo.toml
hotaru_rt_tokio/src/: lib.rs  mutex.rs  once_cell.rs  runtime.rs
hotaru_style_guide/: Cargo.toml
hotaru_style_guide/programfiles/: config.json
hotaru_style_guide/src/: endpoints.rs  main.rs  main_simple.rs  middleware.rs  request_handling.rs  response_patterns.rs  security.rs
hotaru_style_guide/templates/: static_page.html  user_profile.html
hotaru_tls/: Cargo.toml  README.md
hotaru_tls/src/: lib.rs
hotaru_tls/src/config/: client.rs  mod.rs  server.rs
hotaru_tls/src/flexible/: builder.rs  mod.rs  stream.rs
hotaru_tls/src/tls/: accepter.rs  connector.rs  mod.rs  runtime.rs  stream.rs  transport.rs
hotaru_tls/tests/: peer_cert.rs
hotaru_trans/: Cargo.toml  readme.md
hotaru_trans/examples/: middleware_chain.rs  middleware_fixtures.rs  params.rs
hotaru_trans/src/: call.rs  ctor.rs  helper.rs  lib.rs  middleware.rs  mw_chain.rs  outer_attr.rs  outpoint.rs  url.rs
hotaru_trans/src/ap/: address.rs  counter.rs  endpoint.rs  final_handler.rs  handler.rs  mod.rs  outpoint.rs  parsed.rs  parts.rs
hotaru_trans/src/config/: cloneable.rs  config.rs  expand.rs  mod.rs  parser.rs
hotaru_trans/src/helper/: diagnostics.rs  groups.rs  mod.rs  paths.rs  tokens.rs
hotaru_trans/src/middleware/: chain.rs  func.rs  mod.rs
htmstd/: Cargo.toml  readme.md
htmstd/src/: lib.rs  test.rs
hyper_hotaru_example/: Cargo.toml
hyper_hotaru_example/src/: main.rs
tutorial_examples/: Cargo.toml
tutorial_examples/examples/: ch1_basic_server.rs  ch2_advanced_routing.rs  ch3_middleware.rs  ch4_multi_protocol.rs
tutorial_examples/src/: lib.rs  response_helpers.rs  tcp_chat.rs
(+162 files in other folders)
