[package]
name = "ahttpm"
version = "0.7.0" 
edition = "2024"
authors = ["Redstone <redstone@fds.moe>"] 
description = "Akari template / JSON helper macros for the Hotaru web framework"
license = "MIT"
repository = "https://github.com/Field-of-Dreams-Studio/hotaru"
homepage = "https://hotaru.rs"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["hotaru", "akari", "macros", "templates"]

[dependencies] 
syn = { version = "2.0", features = ["full"] } 
proc-macro2 = "1.0.89" 
ctor = "0.4.0" 
quote = "1.0" 

[lib]
proc-macro = true 
