[package]
name = "ahttpm"
version = "0.7.1" 
edition = "2024"
authors = ["Redstone <redstone@fds.moe>"] 
description = "Akari template / JSON helper macros for the Hotaru web framework"
license = "MIT"
repository = "https://github.com/Field-of-Dream-Studio/hotaru"
homepage = "https://hotaru.rs"
categories = ["template-engine", "development-tools::procedural-macro-helpers", "web-programming::http-server"]
keywords = ["hotaru", "akari", "macros", "templates", "json"]

[dependencies] 
syn = { version = "2", features = ["full"] } 
proc-macro2 = "1" 
ctor = "0.4.0" 
quote = "1.0" 

[lib]
proc-macro = true 
