[package]
name = "hotaru_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }
futures = "0.3"

[dev-dependencies]
hotaru = { path = "../hotaru" }
actix-web = "4"
axum = "0.7"
hyper = { version = "1", features = ["full"] }
warp = "0.3"

[[bench]]
name = "http_benchmark"
harness = false
