[package]
name = "hotaru_bench"
version = "0.1.0"
edition = "2024"

[features]
default = []
hotaru_server = ["hotaru", "hotaru_core", "akari", "ctor"]
actix_server = ["actix-web", "actix-rt"]
axum_server = ["axum", "tower"]
rocket_server = ["rocket"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hotaru dependencies
hotaru = { path = "../hotaru", optional = true }
hotaru_core = { path = "../hotaru_core", optional = true }
akari = { version = "0.2.6", optional = true }
ctor = { version = "0.4", optional = true }

# Actix dependencies
actix-web = { version = "4", optional = true }
actix-rt = { version = "2", optional = true }

# Axum dependencies
axum = { version = "0.8.7", optional = true }
tower = { version = "0.5.2", optional = true }

# Rocket dependencies
rocket = { version = "0.5", features = ["json"], optional = true }
