[package]
name = "hotaru_core"
version = "0.8.3"
edition = "2024"
authors = ["Redstone <redstone@fds.moe>"] 
description = "Small, sweet, easy framework for full-stack web application" 
license = "MIT"
repository = "https://github.com/Field-of-Dreams-Studio/hotaru"
homepage = "https://hotaru.rs"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["hotaru"]

[dependencies]
akari = { version = "0.2.8", default-features = false, features = ["dynamic", "extension", "object_macro"] }
parking_lot = { version = "0.12", optional = true }
spin = { version = "0.12", default-features = false, features = ["mutex", "spin_mutex", "rwlock"], optional = true }
av = "0.1"

regex = { version = "1.12", default-features = false, features = [
    "perf-dfa",
    "perf-onepass",
    "perf-backtrack",
    "perf-inline",
    "perf-cache",
] }

[dev-dependencies]
tokio = { version = "1.28", features = ["macros", "rt", "rt-multi-thread"] }

[features]
default = ["full", "std", "spawn_send"]
full = ["regex/unicode", "akari/full"]
lite = ["regex/unicode-perl", "akari/no_std"]
dev-log = []

# Platform/sync axis: choose exactly one (`std` uses parking_lot, `embedded` uses spin).
std = ["dep:parking_lot"]
embedded = ["dep:spin"]

# Task-mobility axis: multi-thread/executor-moving tasks use `spawn_send`; single-thread/local tasks use `spawn_local`.
spawn_send = []
spawn_local = []
