[package]
name = "hotaru_grpc"
version = "0.1.0"
edition = "2021"
authors = ["Hotaru Contributors"]
description = "gRPC support for the Hotaru web framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hotaru/hotaru"
keywords = ["grpc", "rpc", "protobuf", "hotaru", "http2"]
categories = ["network-programming", "web-programming"]

[dependencies]
# Hotaru dependencies
hotaru_core = { path = "../hotaru_core", version = "0.8.0" }
h2per = { path = "../h2per", version = "0.7.0" } 
ctor = "0.4" 

# gRPC stack - leverage battle-tested crates
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

# HTTP/2 and networking
http = "1.1"
http-body = "1.0"
hyper = { version = "1.6", features = ["http2", "server"] }
tower = { version = "0.4", features = ["util"] }
tower-service = "0.3"

# Async and utilities
tokio = { version = "1.28", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures-core = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"
bytes = "1.5"

# Utilities
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
once_cell = "1.19"
hotaru = { path = "../hotaru" }

[build-dependencies]
tonic-build = "0.10"

[[example]]
name = "greeter"
path = "examples/greeter.rs"

[[example]]
name = "simple_server"
path = "examples/simple_server.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"