[package]
name = "hotaru_http"
version = "0.8.3"
edition = "2024"
authors = ["Redstone <redstone@fds.moe>"]
description = "HTTP/1.1 implementation for the Hotaru web framework"
license = "MIT"
repository = "https://github.com/Field-of-Dreams-Studio/hotaru"
homepage = "https://hotaru.rs"
keywords = ["hotaru", "http", "http1", "web", "framework"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
# Hotaru dependencies
hotaru_core = { path = "../hotaru_core", version = "0.8.2" }
hotaru_lib = { path = "../hotaru_lib", version = "0.8.2", features = ["url_encoding"] }
hotaru_tls = { path = "../hotaru_tls", version = "0.8.1", optional = true }

akari = { version = "0.2.8", features = ["full"] }
once_cell = "1.19"
bytes = "1"
futures = "0.3"

tokio = { version = "1.28", features = ["full"] }

[features]
default = []
tls = ["dep:hotaru_tls"]
compression = ["hotaru_lib/compression"]

tokio = ["hotaru_core/tokio"]
embassy = ["hotaru_core/embassy"]
std = ["hotaru_core/std"]
embedded = ["hotaru_core/embedded"]
io_futures = ["hotaru_core/io_futures"]
io_tokio = ["hotaru_core/io_tokio"]
io_embedded = ["hotaru_core/io_embedded"]
rt_tokio = ["hotaru_core/rt_tokio"]
rt_embassy = ["hotaru_core/rt_embassy"]

[dev-dependencies]
tokio-test = "0.4"
once_cell = "1.19" 
