[package]
name = "hotaru_http"
version = "0.8.4"
edition = "2024"
authors = ["Redstone <redstone@fds.moe>"]
description = "HTTP/1.1 implementation for the Hotaru web framework"
license = "MIT"
repository = "https://github.com/Field-of-Dreams-Studio/hotaru"
homepage = "https://hotaru.rs"
keywords = ["hotaru", "http", "http1", "web", "framework"]
categories = ["network-programming", "web-programming::http-server", "web-programming::http-client"]

[dependencies]
# Hotaru dependencies
hotaru_core = { path = "../hotaru_core", version = "=0.8.4" }
hotaru_io_tokio = { path = "../hotaru_io_tokio", version = "=0.8.4" }
hotaru_lib = { path = "../hotaru_lib", version = "=0.8.3", features = ["url_encoding"] }
hotaru_tls = { path = "../hotaru_tls", version = "=0.8.2", optional = true }

akari = { version = "0.2.8", features = ["full"] }
once_cell = "1.19"
bytes = "1"
futures = "0.3"

tokio = { version = "1.28", features = ["full"] }

[features]
default = []
tls = ["dep:hotaru_tls"]
compression = ["hotaru_lib/compression"]

# Hotaru HTTP is currently Tokio/std-only; embedded, futures-io, embedded-io, and spawn-local modes are not supported.
tokio = ["hotaru_core/std", "hotaru_core/spawn_send", "hotaru_io_tokio/std"]
std = ["hotaru_core/std"]
io_tokio = ["hotaru_io_tokio/std"]
spawn_send = ["hotaru_core/spawn_send"]

[dev-dependencies]
tokio-test = "0.4"
once_cell = "1.19" 
