[package]
name = "hotaru_io_embedded"
version = "0.8.4"
edition = "2024"
authors = ["Redstone <redstone@fds.moe>"]
description = "embedded-io-async adapter backend for Hotaru"
license = "MIT"
repository = "https://github.com/Field-of-Dream-Studio/hotaru"
homepage = "https://hotaru.rs"
categories = ["no-std", "embedded", "asynchronous"]
keywords = ["hotaru", "embedded-io", "no-std", "embedded", "async"]

[dependencies]
hotaru_core = { path = "../hotaru_core", version = "=0.8.4", default-features = false }
embedded-io-async = { version = "0.6", default-features = false }

[features]
# This crate's reason to exist is the bare-metal path, so its default is the
# no_std flavour: `embedded` (→ hotaru_core/embedded) + `spawn_local`
# (the mobility mode the trait impls below require — embedded-io-async futures
# are typically `!Send`). Consumers depend on this crate directly — it is not
# routed through the `hotaru` umbrella — so this default is what they get.
default = ["embedded", "spawn_local"]
std = ["hotaru_core/std"]
embedded = ["hotaru_core/embedded"]
spawn_send = ["hotaru_core/spawn_send"]
spawn_local = ["hotaru_core/spawn_local"]
# `spawn_local` refinements: atomic/spin lock backend or local Rc/RefCell internals.
spawn_local_atomic = ["spawn_local", "hotaru_core/spawn_local_atomic"]
spawn_local_no_atomic = ["spawn_local", "hotaru_core/spawn_local_no_atomic"]
