[package]
name = "hotaru_lib"
version = "0.7.3" 
edition = "2024"
authors = ["Redstone <redstone@fds.moe>"] 
description = "Small, sweet, easy framework for full-stack web application" 
license = "GPL-3.0" 
repository = "https://github.com/Field-of-Dreams-Studio/hotaru" 
categories = ["network-programming", "web-programming::http-server"] 
keywords = ["hotaru"]  

[features] 
default = ["url_encoding", "random"] 

random = ["dep:rand"] # This feature enables random 
url_encoding = ["dep:percent-encoding"]  # This feature enables percent-encoding dependency
ende = ["dep:aes-gcm", "dep:pbkdf2", "dep:hmac", "dep:hkdf", "dep:sha2", "dep:base64", "dep:rand"] 
compression = ["dep:flate2", "dep:brotli", "dep:zstd"] 

[dependencies] 

rand = { version = "0.9" , optional = true } 

percent-encoding = { version = "2.2" , optional = true } 

aes-gcm = { version = "0.10.3", optional = true } 
pbkdf2 = { version = "0.12.1", optional = true } 
hmac = { version = "0.12.1", optional = true } 
hkdf = { version = "0.12.4" , optional = true } 
sha2 = { version = "0.10.6", optional = true } 
base64 = { version = "0.21.0", optional = true } 

flate2 = { version = "1.0", optional = true } 
brotli = { version = "3.3", optional = true } 
zstd = { version = "0.12", optional = true } 
